--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
@@ -28,7 +29,7 @@
     <!-- navication bar -->
     <nav class="navbar" id="nav-menu">
       <div class="max-width">
-        <div class="logo"><a href="#">Port<span>Folio</span></a></div>
+        <div class="logo"><a href="#">P<span>S</span></a></div>
         <ul class="menu">
           <li><a href="#home" class="menu-btn nav-link home">Home</a></li>
           <li><a href="#about" class="menu-btn nav-link about">About</a></li>
@@ -45,7 +46,7 @@
               </a>
           </button> -->
             <button style="background-color: transparent;border: none;font-family: Ubuntu, sans-serif;" id="resume-button-1" class="nav-link resume" onclick="resume()">
-              <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1" download="Pragatheeswaran S_New-2.0.pdf">
+              <a href="Pragatheeswaran S_Resume.pdf" id="resume-link-1" download="Pragatheeswaran S_Resume.pdf">
                   Resume
               </a>
           </button>
@@ -86,7 +87,7 @@
         <h2 class="title">About me</h2>
         <div class="about-content">
           <div class="column left">
-            <img class="home-img" src="./images/profile.jpg" alt="">
+            <img class="home-img" id="avatar" src="./images/profile.jpg" alt="">
           </div>
           <div class="column right">
             <div class="text" >I'm Pragathees and I'm a <span class="typing-2"></span></div>
@@ -98,21 +99,14 @@
 
             </p>
             <div>
-              <!-- <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-button-2" download="">Download CV</a> -->
-              <!-- style="background-color: rgba(255, 255, 255, 0.5)" -->
-              <!-- <button id="resume-button-1" class="menu-btn nav-link resume" onclick="resume()" >
-                <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1"  download="Pragatheeswaran S_New-2.0.pdf">
-                  Resume
-                </a>
-            </button> -->
 
               <!-- <button id="resume-button-1" class="nav-link resume" onclick="resume()">
-                <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1" download="Pragatheeswaran S_New-2.0.pdf">
+                <a href="Pragatheeswaran S_Resume.pdf" id="resume-link-1" download="Pragatheeswaran S_Resume.pdf">
                     Resume
                 </a>
             </button> -->
                 <button style="background-color: transparent;border: none;" onclick="resume()"  id="resume-button-2" >
-                  <a id="resume-link-2" href="Pragatheeswaran S_New-2.0.pdf" target="_blank" download="Pragatheeswaran S_New-2.0.pdf">
+                  <a id="resume-link-2" href="Pragatheeswaran S_Resume.pdf" target="_blank" download="Pragatheeswaran S_Resume.pdf">
                   Resume </a>
                 </button>
             </div>
@@ -258,63 +252,19 @@
       <div class="carousel owl-carousel">
         <div class="card project-card">
           <div class="box">
-            <img src="images/epic-1.png" alt="">
-            <div class="text project-title"> Epic Collection</div>
-            <p class="project-description"> <span id="tech">About : </span>This app is a online fashion cloth selling
-              sit in United States and this is clone of Aeropostale. This application allows to buy fashion cloth. I
-              have completed this project in 5 days only</p>
-            <p class="techStack project-tech-stack"><span id="tech">Tech Used:</span>Html, CSS, JavaScript, Bootstrap,
+            <img src="images/Beautygem.png" alt="">
+            <div class="text project-title"> Beautygem</div>
+            <p class="project-description"> <span id="tech">About : </span>BeautyGem here you can browse through a wide range of beauty services. Our platform allows you to select the perfect salon for your specific needs. Booking with BeautyGem is quick and easy.</p>
+            <p class="techStack project-tech-stack"><span id="tech">Tech Stack Used: </span>Html, CSS, JavaScript, Bootstrap,
               express.js, mongodb</p>
             <div class="repo-links">
               <div class="repo-div">
-                <span class="project-github-link"> <a href="https://github.com/Prags1709/wiggly-bucket-6915"
-                    target="_blank"> Git Repo </a></span>
+                <span class="project-github-link"> <a href="https://github.com/manoharmeena123/likeable-creature-964"
+                    target="_blank"> Git Repo <i class="fa fa-github" style="font-size:24px"></i></a></span>
               </div>
               <div class="demo-div">
-                <span class="project-deployed-link"> <a href="https://idyllic-duckanoo-75fda1.netlify.app/"
-                    target="_blank"> Live Site </a></span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card project-card">
-          <div class="box">
-            <img src="images/epic-2.png" alt="">
-            <div class="text project-title"> Epic Collection</div>
-            <p class="project-description"> <span id="tech">About : </span>This app is a online fashion cloth selling
-              sit in United States and this is clone of Aeropostale. This application allows to buy fashion cloth. I
-              have completed this project in 5 days only</p>
-            <p class="techStack project-tech-stack"><span id="tech">Tech Used:</span>Html, CSS, JavaScript, Bootstrap,
-              express.js, mongodb</p>
-            <div class="repo-links">
-              <div class="repo-div">
-                <span class="project-github-link"> <a href="https://github.com/Prags1709/wiggly-bucket-6915"
-                    target="_blank"> Git Repo </a></span>
-              </div>
-              <div class="demo-div">
-                <span class="project-deployed-link"> <a href="https://idyllic-duckanoo-75fda1.netlify.app/"
-                    target="_blank"> Live Site </a></span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card project-card">
-          <div class="box">
-            <img src="images/epic-3.png">
-            <div class="text project-title"> Epic Collection</div>
-            <p class="project-description"> <span id="tech">About : </span>This app is a online fashion cloth selling
-              sit in United States and this is clone of Aeropostale. This application allows to buy fashion cloth. I
-              have completed this project in 5 days only</p>
-            <p class="techStack project-tech-stack"><span id="tech">Tech Used:</span>Html, CSS, JavaScript, Bootstrap,
-              express.js, mongodb</p>
-            <div class="repo-links">
-              <div class="repo-div">
-                <span class="project-github-link"> <a href="https://github.com/Prags1709/wiggly-bucket-6915"
-                    target="_blank"> Git Repo </a></span>
-              </div>
-              <div class="demo-div">
-                <span class="project-deployed-link"> <a href="https://idyllic-duckanoo-75fda1.netlify.app/"
-                    target="_blank"> Live Site </a></span>
+                <span class="project-deployed-link"> <a href="https://strong-pithivier-2d6284.netlify.app/"
+                    target="_blank"> Live Site <i class="fa fa-rocket" style="font-size:24px"></i></a></span>
               </div>
             </div>
           </div>
@@ -323,19 +273,54 @@
           <div class="box">
             <img src="images/epic-1.png" alt="">
             <div class="text project-title"> Epic Collection</div>
-            <p class="project-description"> <span id="tech">About : </span>This app is a online fashion cloth selling
-              sit in United States and this is clone of Aeropostale. This application allows to buy fashion cloth. I
-              have completed this project in 5 days only</p>
-            <p class="techStack project-tech-stack"><span id="tech">Tech Used:</span>Html, CSS, JavaScript, Bootstrap,
+            <p class="project-description"> <span id="tech">About : </span>Epic Collection is an online fashion cloth selling
+              websit and this is clone of Aeropostale. This offer a wide range of stylish and trendy clothing for both men and women.</p>
+            <p style="padding: 10.5px 0px;" class="techStack project-tech-stack"><span id="tech">Tech Stack Used: </span>Html, CSS, JavaScript, Bootstrap,
               express.js, mongodb</p>
             <div class="repo-links">
               <div class="repo-div">
                 <span class="project-github-link"> <a href="https://github.com/Prags1709/wiggly-bucket-6915"
-                    target="_blank"> Git Repo </a></span>
+                    target="_blank"> Git Repo <i class="fa fa-github" style="font-size:24px"></i></a></span>
               </div>
               <div class="demo-div">
                 <span class="project-deployed-link"> <a href="https://idyllic-duckanoo-75fda1.netlify.app/"
-                    target="_blank"> Live Site </a></span>
+                    target="_blank"> Live Site <i class="fa fa-rocket" style="font-size:24px"></i></a></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card project-card">
+          <div class="box">
+            <img src="images/voyage.png">
+            <div class="text project-title"> Voyage.com</div>
+            <p class="project-description"> <span id="tech">About : </span>Voyage.com is a booking website for hotels, flights, taxis. Helps you plan your vacation smoothly. It is truly a one stop Destination for your all Vacations need.</p>
+            <p style="padding: 23px 0px;" class="techStack project-tech-stack"><span id="tech">Tech Stack Used: </span>Html, CSS, JavaScript</p>
+            <div class="repo-links">
+              <div class="repo-div">
+                <span class="project-github-link"> <a href="https://github.com/Prags1709/offbeat-pin-6298"
+                    target="_blank"> Git Repo <i class="fa fa-github" style="font-size:24px"></i></a></span>
+              </div>
+              <div class="demo-div">
+                <span class="project-deployed-link"> <a href="https://celebrated-marzipan-a08b13.netlify.app/"
+                    target="_blank"> Live Site <i class="fa fa-rocket" style="font-size:24px"></i></a></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card project-card">
+          <div class="box">
+            <img src="images/ExploreWide.png" alt="">
+            <div class="text project-title"> Explore Wide</div>
+            <p class="project-description"> <span id="tech">About : </span>Explore Wide is a clone of ChargeBee and it's an online billing software service. I have implemented Signup, Login functions and customer page with responsiveness</p>
+            <p style="padding: 13px 0px;" class="techStack project-tech-stack"><span id="tech">Tech Stack Used: </span>Html, CSS, JavaScript</p>
+            <div class="repo-links">
+              <div class="repo-div">
+                <span class="project-github-link"> <a href="https://github.com/Prags1709/gaudy-week-5323"
+                    target="_blank"> Git Repo <i class="fa fa-github" style="font-size:24px"></i></a></span>
+              </div>
+              <div class="demo-div">
+                <span class="project-deployed-link"> <a href="https://explorewide.netlify.app/"
+                    target="_blank"> Live Site <i class="fa fa-rocket" style="font-size:24px"></i></a></span>
               </div>
             </div>
           </div>
@@ -419,25 +404,26 @@
         </div>
         <div class="column right">
           <div class="text">Message me</div>
-          <form action="#">
+          <form action="#" name="submit-to-google-sheet">
             <div class="fields">
               <div class="field name">
-                <input type="text" placeholder="Name" required>
+                <input type="text" name="Name" placeholder="Name" required>
               </div>
               <div class="field email">
-                <input type="email" placeholder="Email" required>
+                <input type="email" name="Email" placeholder="Email" required>
               </div>
             </div>
             <div class="field">
-              <input type="text" placeholder="Subject" required>
+              <input type="text" name="Subject" placeholder="Subject" required>
             </div>
             <div class="field textarea">
-              <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+              <textarea cols="30" rows="10" name="Message" placeholder="Message.." required></textarea>
             </div>
             <div class="button-area">
               <button type="submit">Send message</button>
             </div>
           </form>
+          <span id="msg"></span>
         </div>
       </div>
     </div>
